Fix about images whitespace and padding

--- a/main.scss
+++ b/main.scss
@@ -129,7 +129,7 @@ hr{
 }
 
 .section-container{
-    padding-top: 140px;
+    padding-top: 120px;
 }
 
 //===========================
@@ -151,6 +151,11 @@ hr{
 //===========================
 // About
 //===========================
+.about-container{
+    padding-top: 70px;
+    padding-bottom:70px;
+}
+
 .about-header{
     margin-top: 0px;
 }
